references and dark theme styling changes

--- a/internal/toc.template
+++ b/internal/toc.template
@@ -14,8 +14,10 @@ $endfor$
 
 </header>
 $endif$
+
 $if(toc)$
 <div class="table-of-contents">
+<h2> Table of Contents </h2>
 $toc$
 </div>
 $endif$
